# dns-price-monitor

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  run  with_env
migrations/: env.py
migrations/versions/: 8738281c5783_init_models.py
src/: database.py  exceptions.py  logger.py  main.py  settings.py  update_price.py  utils.py  views.py
src/api/: router.py
src/api/schemas/: price_history.py  product.py
src/api/services/: base.py  price_history.py  product.py
src/dns/: __init__.py  exceptions.py  service.py  settings.py
src/models/: __init__.py  base.py  price_record.py  product.py
src/schemas/: __init__.py  price_record.py  product.py
src/static/: styles.css
src/templates/: add_product.html  fail.html  products.html  success.html
